Page element is only set to position fixed when transitioning in, so that container element won't collapse.

--- a/styles/global/_layout.scss
+++ b/styles/global/_layout.scss
@@ -33,10 +33,11 @@ main {
   font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
+.fixed { position: fixed; }
 section {
     margin: 15px 0;
     @include xs { margin: 15px 10px; }
-    position: fixed;
+    @include xs { position: fixed; }
 
     opacity: 1;
     transition: opacity, ease-out, 1200ms;
